Add Dropdowns for selecting the language and the range

--- a/src/components/RepoCard/RepoCard.scss
+++ b/src/components/RepoCard/RepoCard.scss
@@ -24,10 +24,14 @@
 
   &__Description {
     flex: 1;
+    min-height: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &__Indicators {
     display: flex;
+    margin-top: 4px;
 
     > div {
       margin-right: 20px;
