--- a/src/components/RepoCard/RepoCard.scss
+++ b/src/components/RepoCard/RepoCard.scss
@@ -1,16 +1,18 @@
 .RepoCard {
-  width: calc(100% / 3 - 40px);
   height: 225px;
-  margin: 0 40px 40px 0;
   padding: 15px 20px;
-
   display: flex;
   flex-direction: column;
-
   background: white;
   box-shadow: 0 4px 10px #00000017;
-
   transition: all ease 100ms;
+
+  width: calc((100% - 2 * 40px) / 3);
+  margin-bottom: 40px;
+
+  &:not(:nth-child(3n)) {
+    margin-right: 40px;
+  }
 
   &:hover {
     box-shadow: 0 8px 12px #00000017;
