--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,8 +1,11 @@
 .Main {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   &__Header {
-    height: 100px;
+    height: 150px;
     display: flex;
     align-items: center;
 
@@ -23,6 +26,7 @@
   }
 
   &__ReposList {
+    flex: 1;
     display: flex;
     flex-wrap: wrap;
   }
