--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -2,8 +2,15 @@
   background: white;
   width: 150px;
   display: flex;
+  position: relative;
 
-  select {
+  > i {
+    position: absolute;
+    right: 12px;
+    top: 10px;
+  }
+
+  > select {
     flex: 1;
     border: none;
     border-radius: 0;
@@ -12,7 +19,7 @@
     background: transparent;
     padding: 10px 14px;
     font-size: 14px;
-    cursor: pointer;
     max-width: 100%;
+    cursor: pointer;
   }
 }
