--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -15,6 +15,12 @@
       > i {
         margin-right: 10px;
       }
+
+      @media screen and (max-width: 600px) {
+        span {
+          display: none;
+        }
+      }
     }
 
     &Actions {
@@ -32,6 +38,13 @@
   &__ReposList {
     flex: 1;
     display: flex;
-    flex-wrap: wrap;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+
+    @media screen and (min-width: 769px) {
+      flex-wrap: wrap;
+    }
   }
 }
