--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,12 @@
 .Header {
-  height: 150px;
+  height: 100px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+
+  > div:first-child {
+    display: flex;
+    align-items: center;
+  }
 
   &__Title {
     font-size: 36px;
@@ -17,14 +22,21 @@
     }
   }
 
-  &__Actions {
+  &__Tabs {
     flex: 1;
     display: flex;
-    flex-direction: row;
     justify-content: flex-end;
 
-    > div {
+    a {
       margin-left: 20px;
+      padding: 4px 0;
+      color: #63686b;
+
+      &.active,
+      &:hover {
+        color: #333;
+        border-bottom: 3px solid #61aeec;
+      }
     }
   }
 }
