--- a/src/index.scss
+++ b/src/index.scss
@@ -44,4 +44,10 @@ a:visited {
   @media screen and (max-width: 1024px) {
     padding: 0 20px;
   }
+
+  .App {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 }
