--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -4,6 +4,17 @@
   display: flex;
   flex-direction: column;
 
+  &__Actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+
+    > div {
+      margin-left: 20px;
+    }
+  }
+
   &__ReposList {
     flex: 1;
     display: flex;
