Implement dashboard page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -35,7 +35,7 @@
       &.active,
       &:hover {
         color: #333;
-        border-bottom: 3px solid #61aeec;
+        border-bottom: 3px solid #c1c4c5;
       }
     }
   }
