--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ body {
   background-color: #eaeff3;
   font-family: 'Open Sans', sans-serif;
   color: #2f2f2f;
-  height: 100vh;
+  min-height: 100vh;
   font-size: 100%;
 }
 
