--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -8,6 +8,25 @@
     width: 200px;
     display: flex;
     flex-direction: column;
+
+    &-Actions {
+      display: flex;
+      flex-direction: column;
+      text-align: right;
+      padding-right: 20px;
+      margin-top: 40px;
+
+      &-Edit,
+      &-Delete {
+        margin-bottom: 12px;
+        color: #87898c;
+        cursor: pointer;
+
+        &:hover {
+          color: #2a2b2d;
+        }
+      }
+    }
   }
 
   &__Results {
