Implement first version of the filter edition

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,11 @@ a:visited {
   color: inherit;
 }
 
+button {
+  border: 0;
+  background: none;
+}
+
 #container {
   max-width: 1024px;
   height: 100%;
