--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -3,9 +3,5 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-
-  img {
-    width: 50px;
-    height: 50px;
-  }
+  height: 100%;
 }
