--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -32,8 +32,24 @@
 
   &__Results {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     background: white;
     box-shadow: 0 4px 10px #00000017;
     margin-bottom: 40px;
+
+    &-NoResults {
+      flex: 1;
+      color: #cecfd4;
+      font-size: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
+
+      > i {
+        margin-right: 10px;
+      }
+    }
   }
 }
