Commonize Modals code

--- a/src/components/FilterEditModal/FilterEditModal.scss
+++ b/src/components/FilterEditModal/FilterEditModal.scss
@@ -1,48 +1,13 @@
 .FilterEditModal {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: 9999;
+  &__TitleInput {
+    font-size: 20px;
+    background: none;
+    border: 0;
+    outline: 0;
+    color: #494b4e;
 
-  &__Overlay {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 800px;
-    background: white;
-    box-shadow: 0 4px 10px #00000017;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__Header {
-    height: 55px;
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
-    background: #ecf2f5;
-
-    &-Title {
-      flex: 1;
-
-      > input {
-        font-size: 20px;
-        background: none;
-        border: 0;
-        outline: 0;
-        color: #494b4e;
-
-        &:hover {
-          color: black;
-        }
-      }
-    }
-
-    img {
-      cursor: pointer;
+    &:hover {
+      color: black;
     }
   }
 
@@ -59,25 +24,5 @@
     background: none;
     font-size: 14px;
     cursor: pointer;
-  }
-
-  &__Actions {
-    display: flex;
-    justify-content: flex-end;
-    padding: 0 20px 20px 0;
-
-    > .Button {
-      margin-left: 10px;
-    }
-  }
-
-  &__Backdrop {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.2);
-    z-index: -1;
   }
 }
