Trigger a modal to confirm deletion when user click on "Delete Filter" action

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -15,6 +15,15 @@
     }
   }
 
+  &--alert {
+    background: #dc3545;
+    color: white;
+
+    &:hover {
+      background: #c82333;
+    }
+  }
+
   &--default {
     background: #ecf2f5;
 
