Increase input predicate min-width to 250px

--- a/src/components/FilterPredicate/FilterPredicate.scss
+++ b/src/components/FilterPredicate/FilterPredicate.scss
@@ -43,6 +43,10 @@ $radius: 4px;
     border-top-right-radius: $radius;
     border-bottom-right-radius: $radius;
 
+    > input {
+      min-width: 250px;
+    }
+
     > input,
     > select {
       font-size: 14px;
