--- a/src/components/FilterEditModal/FilterEditModal.scss
+++ b/src/components/FilterEditModal/FilterEditModal.scss
@@ -5,6 +5,8 @@
     border: 0;
     outline: 0;
     color: #494b4e;
+    width: 100%;
+    padding-right: 20px;
 
     &:hover {
       color: black;
