--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,7 +1,8 @@
 .Dashboard {
+  display: flex;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
-  display: flex;
   padding-top: 57px;
 
   &__Filters {
