Add ellipsis and overflow to repo cards titles

--- a/src/components/RepoCard/RepoCard.scss
+++ b/src/components/RepoCard/RepoCard.scss
@@ -37,6 +37,8 @@
   &__Name {
     font-size: 24px;
     margin-bottom: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &__Description {
