--- a/src/components/SettingsModal/SettingsModal.scss
+++ b/src/components/SettingsModal/SettingsModal.scss
@@ -3,12 +3,11 @@
 .SettingsModal {
   &__Form {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-wrap: wrap;
     padding: 20px;
 
     &-HelpText {
-      font-size: 14px;
+      font-size: 13px;
       color: #777f82;
 
       a {
@@ -17,6 +16,11 @@
 
       li {
         font-family: monospace;
+      }
+
+      p,
+      ul {
+        margin: 0;
       }
     }
 
@@ -31,15 +35,16 @@
   }
 
   &__FormGroup {
+    width: 50%;
     display: flex;
     flex-direction: column;
 
-    &-Header {
-      margin-bottom: 10px;
+    &:not(:last-child) {
+      margin-bottom: 15px;
     }
 
-    &--behavior {
-      margin-bottom: 20px;
+    &-Header {
+      margin-bottom: 10px;
     }
 
     &--token {
@@ -50,7 +55,7 @@
       > input {
         width: 300px;
         padding: 4px 8px;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
       }
     }
   }
