--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,7 +1,13 @@
+@import 'Loader.dark.scss';
+
 .Loader {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
+
+  circle {
+    stroke: #678bc2;
+  }
 }
