--- a/src/index.scss
+++ b/src/index.scss
@@ -1,26 +1,16 @@
+@tailwind preflight;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed');
 
-html {
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
 body {
-  margin: 0;
-  background-color: #eaeff3;
-  font-family: 'Open Sans', sans-serif;
-  color: #2f2f2f;
-  min-height: 100vh;
-  font-size: 100%;
+  @apply text-black font-open;
+  @apply m-0 min-h-screen;
+  @apply bg-grey-lightest;
 
   &.dark {
-    background-color: #2f2f2f;
-    color: white;
+    @apply bg-black text-white;
   }
 }
 
@@ -30,34 +20,21 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Roboto', sans-serif;
+  @apply font-roboto;
 }
 
 a,
 a:hover,
 a:active,
 a:visited {
-  text-decoration: none;
-  color: inherit;
-}
-
-button {
-  border: 0;
-  background: none;
+  @apply no-underline;
 }
 
 #container {
-  max-width: 1024px;
-  height: 100%;
-  margin: auto;
-
-  @media screen and (max-width: 1024px) {
-    padding: 0 20px;
-  }
+  @apply min-h-full mx-auto;
+  max-width: config('screens.lg');
 
   .App {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    @apply min-h-full flex flex-col;
   }
 }
