Minor UI tweaks in the Settings modal

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -8,6 +8,12 @@
   outline: 0;
   cursor: pointer;
 
+  &,
+  &:hover,
+  &:active {
+    outline: none;
+  }
+
   &--primary {
     background: #298fee;
     color: white;
