Create generic animated modal to be used for all modals

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,500');
 
 body {
   @apply text-black font-open;
